Closed Bug 1694186 Opened 5 years ago Closed 5 years ago

"JS MachExceptionHandler" thread is shown as "JS MachExceptio" in about:processes

Categories

(Core :: JavaScript Engine, defect)

x86_64
macOS
defect

Tracking

()

RESOLVED FIXED
88 Branch
Tracking Status
firefox88 --- fixed

People

(Reporter: florian, Assigned: florian)

References

Details

Attachments

(1 file)

This code is truncating thread names set through ThisThread::SetName to 15 characters, which is the correct thread name length limit for Linux, but Mac supports up to 63 characters (according to this code: https://searchfox.org/mozilla-central/rev/281009d3b7e1e1496b9524d5478ff4f0b7369573/ipc/chromium/src/base/platform_thread_mac.mm#63-65).

The truncated thread name can be seen in about:processes (with toolkit.aboutProcesses.showThreads set to true in about:config).

Assignee: nobody → florian
Status: NEW → ASSIGNED
Pushed by fqueze@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/b5d1df32ae52 JS thread names should be allowed to use up to 63 characters on Mac, r=sfink.
Status: ASSIGNED → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → 88 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: