Bug 1694186 - JS thread names should be allowed to use up to 63 characters on Mac, r=sfink.

Differential Revision: https://phabricator.services.mozilla.com/D105990